SET-UP BASIC UI/UX ELEMENTS
- ADDED a Contact Card to give the bot, a human touch
- ADDED a sample conversational data file in JSON format
- CREATED a first version of the UI using elements from Bootstrap and Font Awesome
- WROTE an initial programmatic rendering of conversation. The logic is incorrect
- MODIFIED .gitignore to add APPS/

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Conversational Bot",
   "main": "server.js",
   "dependencies": {
-    "express": "*"
+    "ejs": "^2.5.5",
+    "express": "*",
+    "request": "^2.79.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
